--- a/electron/package.json
+++ b/electron/package.json
@@ -20,7 +20,9 @@
     "electron:make": "npm run build && electron-builder build -c ./electron-builder.config.json -p always"
   },
   "dependencies": {
-    "@capacitor-community/electron": "^5.0.0",
+    "@capacitor-community/electron": "^5.0.1",
+    "@capacitor/cli": "^7.4.2",
+    "@capacitor/core": "^7.4.2",
     "chokidar": "~3.5.3",
     "electron-is-dev": "~2.0.0",
     "electron-serve": "~1.1.0",
