Correções para o rodar o emulador.

--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -1,15 +1,25 @@
 {
   "compileOnSave": true,
-  "include": ["./src/**/*", "./capacitor.config.ts", "./capacitor.config.js"],
+  "include": [
+    "./src/**/*",
+    "./capacitor.config.ts",
+    "./capacitor.config.js"
+  ],
   "compilerOptions": {
+    "skipLibCheck": true,
     "outDir": "./build",
     "importHelpers": true,
     "target": "ES2017",
     "module": "CommonJS",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "typeRoots": ["./node_modules/@types"],
+    "typeRoots": [
+      "./node_modules/@types"
+    ],
     "allowJs": true,
-    "rootDir": "."
+    "rootDir": ".",
+    "types": [
+      "node"
+    ]
   }
 }
