--- a/electron/electron-builder.config.json
+++ b/electron/electron-builder.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.yourdoamnin.yourapp",
+  "appId": "com.spacefeed.marte",
   "directories": {
     "buildResources": "resources"
   },
