--- a/electron/package.json
+++ b/electron/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "Spacefeed - Marte",
+  "name": "spacefeed-marte",
+  "productName": "Spacefeed Marte",
   "version": "1.0.0",
-  "description": "An Amazing Capacitor App",
+  "description": "CRM Para polos da Cruzeiro do Sul Virtual",
   "author": {
     "name": "",
     "email": ""
   },
   "repository": {
-    "type": "git",
-    "url": ""
+    "type": "github",
+    "url": "https://github.com/rubensjunior/marte.git"
   },
   "license": "MIT",
   "main": "build/src/index.js",
