Ajuste para corrigir a falta dos arquivos no release que locamente estao na pasta dist.

--- a/electron/package.json
+++ b/electron/package.json
@@ -18,7 +18,8 @@
     "electron:start-live": "node ./live-runner.js",
     "electron:start": "npm run build && electron --inspect=5858 ./",
     "electron:pack": "npm run build && electron-builder build --dir -c ./electron-builder.config.json",
-    "electron:make": "npm run build && electron-builder build -c ./electron-builder.config.json -p always"
+    "electron:make": "npm run build && electron-builder build -c ./electron-builder.config.json -p always",
+    "electron:release": "npm run build && electron-builder --win --x64 -c ./electron-builder.config.json --publish always"
   },
   "dependencies": {
     "@capacitor-community/electron": "^5.0.1",
