Correção final do erro de latest.yml

--- a/electron/electron-builder.config.json
+++ b/electron/electron-builder.config.json
@@ -10,7 +10,10 @@
     "app/**/*"
   ],
   "publish": {
-    "provider": "github"
+    "provider": "github",
+    "owner": "rubensjunior",
+    "repo": "marte",
+    "releaseType": "release"
   },
   "nsis": {
     "allowElevation": true,
