--- a/.wappler/project.json
+++ b/.wappler/project.json
@@ -27,8 +27,11 @@
       "checked": true
     },
     "platform": "electron",
-    "target": ""
+    "target": "",
+    "device": null,
+    "deviceId": null
   },
   "appFile": "/js/app.js",
-  "extensions": []
+  "extensions": [],
+  "useSQLite": true
 }
