--- a/www/interno/.wappler_folder.json
+++ b/www/interno/.wappler_folder.json
@@ -6,5 +6,17 @@
   "home.html": {
     "layoutPage": "",
     "description": ""
+  },
+  "colaborador.html": {
+    "layoutPage": "",
+    "description": ""
+  },
+  "empresa.html": {
+    "layoutPage": "",
+    "description": ""
+  },
+  "funil-de-vendas.html": {
+    "layoutPage": "",
+    "description": ""
   }
 }
