Adicionado font awesome, dados do usuario logado e empresa atual, loading de carregamento.

--- a/.wappler/project.json
+++ b/.wappler/project.json
@@ -18,6 +18,10 @@
     {
       "name": "capacitor",
       "type": "local"
+    },
+    {
+      "name": "fontawesome_5",
+      "type": "local"
     }
   ],
   "runtime": "capacitor",
