Inicio pagina de times. criado rota, add link no layout.

--- a/www/interno/.wappler_folder.json
+++ b/www/interno/.wappler_folder.json
@@ -18,5 +18,9 @@
   "funil-de-vendas.html": {
     "layoutPage": "",
     "description": ""
+  },
+  "times.html": {
+    "layoutPage": "",
+    "description": ""
   }
 }
