--- a/www/interno/.wappler_folder.json
+++ b/www/interno/.wappler_folder.json
@@ -22,5 +22,9 @@
   "times.html": {
     "layoutPage": "",
     "description": ""
+  },
+  "board-funil.html": {
+    "layoutPage": "",
+    "description": ""
   }
 }
