Design final, paginas e ajuste de conteudo ao novo layout.

--- a/www/interno/.wappler_folder.json
+++ b/www/interno/.wappler_folder.json
@@ -26,5 +26,9 @@
   "board-funil.html": {
     "layoutPage": "",
     "description": ""
+  },
+  "Leads.html": {
+    "layoutPage": "",
+    "description": ""
   }
 }
