--- a/electron/package.json
+++ b/electron/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spacefeed-marte",
   "productName": "Spacefeed Marte",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "description": "CRM Para polos da Cruzeiro do Sul Virtual",
   "author": {
     "name": "",
@@ -14,6 +14,7 @@
   "license": "MIT",
   "main": "build/src/index.js",
   "scripts": {
+    "create-icons": "node create-icons.js",
     "build": "tsc && electron-rebuild",
     "electron:start-live": "node ./live-runner.js",
     "electron:start": "npm run build && electron --inspect=5858 ./",
