Configurado setup completa de imagens para instalador e icone de execucao.

--- a/electron/electron-builder.config.json
+++ b/electron/electron-builder.config.json
@@ -23,7 +23,9 @@
     "allowToChangeInstallationDirectory": true,
     "createDesktopShortcut": true,
     "createStartMenuShortcut": true,
-    "shortcutName": "Spacefeed Marte"
+    "shortcutName": "Spacefeed Marte",
+    "installerIcon": "assets/installerIcon.ico",
+    "uninstallerIcon": "assets/uninstallIcon.ico"
   },
   "win": {
     "target": "nsis",
