--- a/electron/package.json
+++ b/electron/package.json
@@ -37,6 +37,7 @@
     "electron": "^26.2.2",
     "electron-builder": "~23.6.0",
     "electron-rebuild": "^3.2.9",
+    "png-to-ico": "^3.0.1",
     "typescript": "^5.0.4"
   },
   "keywords": [
